style: fix hero spacing

--- a/css/style.css
+++ b/css/style.css
@@ -195,25 +195,24 @@ header {
     display: block;
 }
 /* hero info box */
-.info-box {
-    gap: 24px;
+.hero-content .info-box {
+    gap: 20px;
+    flex-basis: 40%;
+}
+/* hero img */
+.hero-content figure {
+    flex-basis: 60%;
 }
 /* first hero button */
 .info-box div button:nth-child(1) {
     margin-bottom: 12px;
 }
-/* scrool down icon */
-.scroll-down {
-    /* margin-top: 40px; */
-}
+
+/* scroll down icon */
 .scroll-down i {
-    font-size: 40px;
+    font-size: 28px;
 }
-/* hero img */
-/* #hero figure {
-    position: relative;
-    top: 40px;
-} */
+
  #hero figure, .info-box {
     position: relative;
     top: 40px;
